# IO

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CppCheckResults.xml  Makefile  Makefile-mingw64-dll  Makefile-mingw64-static  Makefile-unix-shared  Makefile.mingw  NMakefile-msvcx64-dll.mak  README.md  README.txt  io.cbp  io_dll_msvc.mak  vcpkg.json
doc/: tutorial.md
include/: buffer.hpp  channels.hpp  char_cast.hpp  charsetcvt.hpp  charsetdetector.hpp  charsets.hpp  codedetect.hpp  config.hpp  console.hpp  conststring.hpp  errorcheck.hpp  files.hpp  gnu_tls_security.hpp  hashing.hpp  memory_channel.hpp  network.hpp  object.hpp  scoped_array.hpp  stream.hpp  string_algs.hpp  stringpool.hpp  text.hpp  threading.hpp  tuple_meta_reflect.hpp  type_traits_ext.hpp  unicode_bom.hpp  xml_binding.hpp  xml_error.hpp  xml_event.hpp  xml_event_writer.hpp  xml_lexcast.hpp  xml_parse.hpp  xml_reader.hpp  xml_source.hpp  xml_types.hpp  xml_validator.hpp
libio/: CMakeLists.txt  NMakefile-msvcx64-dll.mak  io.cbp
libio/include/: buffer.hpp  channels.hpp  char_cast.hpp  charsetcvt.hpp  config.hpp  conststring.hpp  object.hpp  scoped_array.hpp  string_algs.hpp  stringpool.hpp  text.hpp  type_traits_ext.hpp
libio/include/config/compiler/: clang.hpp  gcc.hpp  ms_visual_cpp.hpp
libio/include/config/libs/: h_allocator.hpp
libio/include/io/config/: libio_config.hpp
libio/include/io/config/compiler/: clang.hpp  gcc.hpp  ms_visual_cpp.hpp
libio/include/io/config/libs/: exceptions.hpp  h_allocator.hpp  intrusive_ptr.hpp
libio/include/io/config/posix/: posixconf.hpp
libio/include/io/config/win/: winconf.hpp
libio/include/io/core/: buffer.hpp  channels.hpp  char_cast.hpp  console.hpp  conststring.hpp  error_check.hpp  files.hpp  hashing.hpp  memory_channel.hpp  object.hpp  scoped_array.hpp  stateful.hpp  string_algs.hpp  stringpool.hpp  threading.hpp  type_traits_ext.hpp
libio/include/io/core/posix/: console.hpp  criticalsection.hpp  errorcheck.hpp  files.hpp  io_context.hpp  memory_traits.hpp  rwlock.hpp  thread_pool.hpp
libio/include/io/core/win/: console.hpp  criticalsection.hpp  errorcheck.hpp  files.hpp  handlechannel.hpp  memory_traits.hpp  srw_lock.hpp  thread_pool.hpp  win_asynch_channel.hpp
libio/include/io/net/: context.hpp  http_client.hpp  http_error.hpp  security.hpp  uri.hpp
libio/include/io/net/posix/: io_context.hpp  sockets.hpp  synch_socket_channel.hpp
libio/include/io/net/win/: asynch_socket_channel.hpp  io_context.hpp  sockets.hpp  synch_socket_channel.hpp  win_asynch_channel.hpp  wsaerror.hpp
libio/include/io/textapi/: charset_converter.hpp  charset_detector.hpp  charsets.hpp  nio.hpp  stream.hpp  unicode.hpp
libio/include/io/textapi/detail/: arabic_model.hpp  coding_state_machine.hpp  cyrylic_model.hpp  danish_model.hpp  esperanto_model.hpp  french_model.hpp  german_model.hpp  greek_model.hpp  hungarian_model.hpp  latin1_prober.hpp  pkg_int.hpp  prober.hpp  single_byte_group_prober.hpp  single_byte_prober.hpp  single_bytete_prober.hpp  spanish_model.hpp  turkish_model.hpp  utf8_prober.hpp
libio/include/io/tls/: asynch_channel.hpp  blocking_channel.hpp  credentials.hpp  security_context.hpp  session.hpp  tls_error.hpp  transport.hpp
libio/include/io/xml/: binding.hpp  event.hpp  event_stream_parser.hpp  event_writer.hpp  reader.hpp  source.hpp  types.hpp  xml_error.hpp
libio/include/net/: http_error.hpp  security.hpp  uri.hpp
libio/include/posix/: criticalsection.hpp  errorcheck.hpp  memory_traits.hpp  sockets.hpp  synch_socket_channel.hpp  thread_pool.hpp
libio/include/tls/: asynch_channel.hpp  security_context.hpp  session.hpp  transport.hpp
libio/include/win/: asynch_socket_channel.hpp  console.hpp  files.hpp  handlechannel.hpp  io_context.hpp  memory_traits.hpp  sockets.hpp  srw_lock.hpp  thread_pool.hpp  win_asynch_channel.hpp  winconf.hpp  wsaerror.hpp
libio/include/xml/: event.hpp  event_stream_parser.hpp  reader.hpp  source.hpp  types.hpp
libio/src/: buffer.cpp  channels.cpp  char_cast.cpp  charsetcvt.cpp  charsetdetector.cpp  charsets.cpp  hashing.cpp  latin1_prober.cpp  memory_channel.cpp  stdafx.hpp  stringpool.cpp  unicode_bom.cpp
libio/src/core/: buffer.cpp  channels.cpp  char_cast.cpp  conststring.cpp  hashing.cpp  memory_channel.cpp  stateful.cpp  stringpool.cpp
libio/src/core/posix/: console.cpp  errorcheck.cpp  files.cpp  thread_pool.cpp
libio/src/core/win/: console.cpp  errorcheck.cpp  files.cpp  memory_traits.cpp  shared_library.cpp  thread_pool.cpp
libio/src/net/: http_client.cpp  http_error.cpp  uri.cpp
libio/src/net/posix/: io_context.cpp  sockets.cpp  synch_socket_channel.cpp
libio/src/net/win/: asynch_socket_channel.cpp  io_context.cpp  sockets.cpp  synch_socket_channel.cpp  wsaerror.cpp
libio/src/posix/: console.cpp  synch_socket_channel.cpp
libio/src/textapi/: arabic_model.cpp  charset_converter.cpp  charset_detector.cpp  charsets.cpp  coding_state_machine.cpp  cyrylic_model.cpp  danish_model.cpp  esperanto_model.cpp  french_model.cpp  german_model.cpp  greek_model.cpp  hungarian_model.cpp  latin1_prober.cpp  prober.cpp  single_byte_group_prober.cpp  single_byte_prober.cpp  single_bytete_prober.cpp  spanish_model.cpp  turkish_model.cpp  unicode.cpp  utf8_prober.cpp
libio/src/tls/: asynch_channel.cpp  blocking_channel.cpp  credentials.cpp  security_context.cpp  session.cpp  tls_error.cpp  transport.cpp
libio/src/win/: asynch_socket_channel.cpp  errorcheck.cpp  files.cpp  io_context.cpp  memory_traits.cpp  sockets.cpp  thread_pool.cpp
libio/src/xml/: error.cpp  event.cpp  event_stream_parser.cpp  event_writer.cpp  reader.cpp  source.cpp  xml_error.cpp
src/: buffer.cpp  channels.cpp  char_cast.cpp  charsetcvt.cpp  charsetdetector.cpp  charsets.cpp  codedetect.cpp  conststring.cpp  gnu_tls_security.cpp  hashing.cpp  (+15 more)
test/: CMakeLists.txt  char_cast_test.cpp  char_cast_test.hpp  charset_conv_test.cpp  charset_detector_test.cpp  charset_test.cpp  fixtures.hpp  hash_test.cpp  main.cpp  stdafx.cpp  stdafx.hpp  string_cast.cpp  test.cbp  time_cast_test.cpp
(+261 files in other folders)
